# clover_lab

./: CMakeLists.txt  README.md  clover_lab_mujoco.urdf  clover_lab_raw_model.xml  package.xml
meshes/: handle.stl
scripts/: build.sh  build_mjcf.sh  run_simulation.sh
srdf/: clover_lab.srdf  cube_30.srdf  cube_50.srdf
urdf/: base_cabinet.urdf  clover_lab.urdf  cube_30.urdf  cube_50.urdf  wall_cabinet.urdf
xacro/: base_cabinet.urdf.xacro  base_cabinet.xacro  clover_lab.urdf.xacro  components.xacro  materials.xacro  wall_cabinet.urdf.xacro  wall_cabinet.xacro
xacro/include/: components.xacro  materials.xacro  properties.xacro  wall.xacro
